# docker-rust-hello

./: Cargo.toml
