[package]
name = "docker-rust-hello"
version = "0.1.0"
edition = "2021"
description = "A docker rust spin up"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", registry = "https://github.com/rust-lang/crates.io-index"}
